@@ -11,6 +11,7 @@ Revision history for Lufi
 	- Catalan translation
 	- IE 11 support
 	- Deleting files from "My files" is now done with Ajax (#23)
+	- Allow bulk files deletion from "My files" (#24)
 	- Bugfixes
 
 0.01  2017-01-09
